Manuel Button Hinzugefügt

--- a/src/main/resources/templates/Authors.html
+++ b/src/main/resources/templates/Authors.html
@@ -24,6 +24,7 @@
         <h1>Test Example</h1>
         <p>Dies ist ein Test mal schauen ob das bei euch so klappt </p>
         <p><u>Hier ist ein Weiterer Paragraph</u></p>
+        <button type="button">Press ME</button>
     </div>
 
     <div class="mt-4 p-5 bg-primary text-white rounded">
