--- a/src/main/resources/templates/Authors.html
+++ b/src/main/resources/templates/Authors.html
@@ -26,7 +26,7 @@
         <p>Dies ist ein Test mal schauen ob das bei euch so klappt </p>
         <p><u>Hier ist ein Weiterer Paragraph</u></p>
         <button type="button">Press ME</button>
-        <button type="button">Neuere Button</button>
+        <button type="button">Neuer Button</button>
     </div>
 
     <div class="mt-4 p-5 bg-primary text-white rounded">
