Folder moved and tabel in Events.html updated

--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Events</h1>
-    <table>
+    <table class = "table table-bordered">
         <tr>
             <th>Id</th>
             <th>Name</th>
