--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Events</title>
+    <link rel="icon" type="image/png" href="/images/EVERout_Logo_dunkel.png">
     <!--linking Bootstrap stylesheet and js-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
