--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
-    <link rel="icon" type="image/png" href="/images/EVERout_Logo_dunkel.png">
+    <link rel="icon" type="image/png" href="/images/EVERout_Logo_dunkel.png" sizes="64x64">
 
     <!--linking Bootstrap stylesheet and js-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
+    <h1>hier kommt das bild</h1>
+    <img src="/images/EVERout_Logo_dunkel.png"  height="200" width="300">
 </body>
 </html>
