--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -10,7 +10,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>hier kommt das bild</h1>
-    <img src="/images/icons/EVERout_Logo_dunkel.png" height="200" width="300">
+    <div class="container">
+        <!--Um ein Event zu erstellen-->
+        <header>
+            <h1>Create Event</h1>
+
+            <form id="event-form">
+
+                <div class="form-row">
+                    <label for="id">Id</label>
+                    <input type="text" id="id" name="id" disabled placeholder="(auto-generated)">
+                </div>
+
+                <div class="form-row">
+                    <label for="name">Name </label>
+                    <input type="text" id="name" name="name" required placeholder="Event name">
+                </div>
+
+                <div class="form-row">
+                    <label for="description">Description</label>
+                    <textarea id="description" name="description" placeholder="Optional description"></textarea>
+                </div>
+
+                <div class="form-row">
+                    <label for="location">Location</label>
+                    <input type="text" id="location" name="location" required placeholder="City, Hall, ...">
+                </div>
+
+                <div class="form-row">
+                    <label for="date">Date </label>
+                    <input type="date" id="date" name="date" required>
+                </div>
+
+                <div class="form-row">
+                    <label for="price">Price (€)</label>
+                    <input type="number" id="price" name="price" step="0.01" required placeholder="49.99">
+                </div>
+
+                <button type="submit">Create Event</button>
+        </header>
+    </div>
 </body>
 </html>
