Create Event angefangen

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -13,6 +13,7 @@
     <div class="container">
         <!--Um ein Event zu erstellen-->
         <header>
+            <img src="/images/icons/EVERout_Logo_dunkel.png" height=200px>
             <h1>Create Event</h1>
 
             <form id="event-form">
@@ -48,7 +49,18 @@
                 </div>
 
                 <button type="submit">Create Event</button>
+            </form>
         </header>
     </div>
+
+    <!--Success Info when you have created an Event-->
+    <h1>We can use this at an later moment</h1>
+    <div class="alert alert-success">
+        <strong>Success!</strong> Your Event was Succesfully created.
+    </div>
+
+    <!--Overview over the now created Event-->
+    <h1>Overview</h1>
+    <h1>All the Infos about the now created event</h1>
 </body>
 </html>
