--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+<img src="/images/icons/EVERout_Logo_dunkel.png" height=200px>
 <button type="button" id="openPopup" class="btn btn-primary">Create Event</button>
 
 <div id="popup" style="display:none;">
