--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -47,6 +47,7 @@
             </div>
 
             <button type="button" id="nextBtn">Next</button>
+            <button type="button" id="cancelBtn" class="btn btn-secondary">Cancel</button>
         </div>
 
         <!-- STEP 2 (Review + Submit) -->
