--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -46,8 +46,8 @@
                 <input type="number" id="price" name="price" step="0.01" required>
             </div>
 
-            <button type="button" id="nextBtn">Next</button>
             <button type="button" id="cancelBtn" class="btn btn-secondary">Cancel</button>
+            <button type="button" id="nextBtn" class="btn btn-primary">Next</button>
         </div>
 
         <!-- STEP 2 (Review + Submit) -->
