--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -19,6 +19,7 @@
             <th>Location</th>
             <th>Date</th>
             <th>Price</th>
+            <th>Status</th>
         </tr>
         <tr th:each="event : ${events}">
             <td th:text="${event.id}"></td>
@@ -27,6 +28,7 @@
             <td th:text="${event.location}"></td>
             <td th:text="${event.date}"></td>
             <td th:text="${event.price}"></td>
+            <td th:text="${event.status}"></td>
         </tr>
     </table>
 
