--- a/src/main/resources/static/css/createEvent.css
+++ b/src/main/resources/static/css/createEvent.css
@@ -163,3 +163,19 @@ input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
 }
 
 
+.readonly-file {
+    pointer-events: none;   /* Maus-Interaktion ausschalten */
+    opacity: 0.6;           /* leicht ausgegraut, optional */
+}
+
+#fileNames {
+    margin-top: 5px;
+    font-size: 10px;
+    color: #333;
+}
+
+#fileNames ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin: 0;
+}
