Start Date und End Date bei Create Event hinzugefügt

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -42,8 +42,13 @@
                     </div>
 
                     <div class="form-row">
-                        <label for="date">Date </label>
-                        <input type="date" id="date" name="date" required>
+                        <label for="startdate">Start Date </label>
+                        <input type="datetime-local" id="startdate" name="date" required>
+                    </div>
+
+                    <div class="form-row">
+                        <label for="enddate">End Date </label>
+                        <input type="datetime-local" id="enddate" name="date" required>
                     </div>
 
                     <div class="form-row">
