--- a/src/main/resources/static/css/login_page.css
+++ b/src/main/resources/static/css/login_page.css
@@ -166,7 +166,7 @@ body{
 }
 
 .container.active .toggle-container{
-    transform: translateX(-100%);
+    transform: translateX(0);
     border-radius: 0 150px 100px 0;
 }
 
