--- a/src/main/resources/static/css/login_page.css
+++ b/src/main/resources/static/css/login_page.css
@@ -93,35 +93,25 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
-.sign-in, .sign-up{
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 50%;
-    transition: all 0.6s ease-in-out;
-}
-
-/* Sign In Panel (Startzustand sichtbar) */
 .sign-in{
     left: 0;
+    width: 50%;
     z-index: 2;
 }
 
-/* Wenn aktiv → nach links verschieben */
-.container.active .sign-in {
-    transform: translateX(-100%);
+.container.active .sign-in{
+    transform: translateX(100%);
 }
 
-/* Sign Up Panel (Startzustand rechts, unsichtbar) */
-.sign-up {
-    left: 50%;
+.sign-up{
+    left: 0;
+    width: 50%;
     opacity: 0;
     z-index: 1;
 }
 
-/* Wenn aktiv → Sign Up sichtbar und verschoben */
-.container.active .sign-up {
-    transform: translateX(-100%);
+.container.active .sign-up{
+    transform: translateX(100%);
     opacity: 1;
     z-index: 5;
     animation: move 0.6s;
@@ -166,7 +156,7 @@ body{
 }
 
 .container.active .toggle-container{
-    transform: translateX(0);
+    transform: translateX(-100%);
     border-radius: 0 150px 100px 0;
 }
 
