--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -42,13 +42,8 @@
                     </div>
 
                     <div class="form-row">
-                        <label for="startdate">Start Date </label>
-                        <input type="datetime-local" id="startdate" name="date" required>
-                    </div>
-
-                    <div class="form-row">
-                        <label for="enddate">End Date </label>
-                        <input type="datetime-local" id="enddate" name="date" required>
+                        <label for="date">Date </label>
+                        <input type="date" id="date" name="date" required>
                     </div>
 
                     <div class="form-row">
