--- a/src/main/resources/templates/Usertest.html
+++ b/src/main/resources/templates/Usertest.html
@@ -14,7 +14,6 @@
 
 <div class="container" id="container">
     <div class="form-container sign-up">
-
         <form>
             <h1>Create Account</h1>
             <div class="social-icons">
@@ -30,11 +29,6 @@
             <button>Sign Up</button>
         </form>
     </div>
-
-
-
-
-
     <div class="form-container sign-in">
         <form>
             <h1>Sign In</h1>
@@ -51,30 +45,22 @@
             <button>Sign In</button>
         </form>
     </div>
-
-
-
     <div class="toggle-container">
         <div class="toggle">
             <div class="toggle-panel toggle-left">
-                <h1>Welcome!</h1>
-                <p>Enter your personal details to use all of site features</p>
-                <button type="button" class="hidden" id="login">Sign In</button>
-            </div>
-
-
-            <div class="toggle-panel toggle-right">
                 <h1>Welcome Back!</h1>
+                <p>Enter your personal details to use all of site features</p>
+                <button class="hidden" id="login">Sign In</button>
+            </div>
+            <div class="toggle-panel toggle-right">
+                <h1>Hello, Friend!</h1>
                 <p>Register with your personal details to use all of site features</p>
-                <button type="button" class="hidden" id="register">Sign Up</button>
+                <button class="hidden" id="register">Sign Up</button>
             </div>
         </div>
-
     </div>
-
-
-
 </div>
-<script src="js/login_page.js" defer></script>
+
+<script src="/css/login_page.js?v=1"></script>
 </body>
 </html>
