--- a/src/main/resources/templates/Usertest.html
+++ b/src/main/resources/templates/Usertest.html
@@ -61,6 +61,6 @@
     </div>
 </div>
 
-<script src="/css/login_page.js?v=1"></script>
+<script src="/js/login_page.js?v=1"></script>
 </body>
 </html>
