--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="/images/icons/EVERout_Logo_dunkel_v3.png">
     <!--linking Bootstrap stylesheet and js-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <link rel="stylesheet" href="/css/eventList.css">
 </head>
 <body>
