--- a/src/main/resources/templates/Test.html
+++ b/src/main/resources/templates/Test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
     <h1>Ich bin ein Test</h1>
