--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -56,7 +56,7 @@
                         <input type="file" id="images" name="images" accept="image/*" multiple required onchange="listFileNames()">
                     </div>
 
-                    <!-- Hier erscheinen die Dateinamen -->
+                    <!-- uploaded Filenames -->
                     <div id="fileNames"></div>
 
                     <button type="button" id="nextBtn" class="btn btn-primary" onclick="checkValidation('true')">Next</button>
