--- a/src/main/resources/static/css/createEvent.css
+++ b/src/main/resources/static/css/createEvent.css
@@ -1,44 +1,3 @@
-/* Background-Overlay */
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 999;
-}
-
-
-.popup-content {
-    background-color: #fff;
-    padding: 20px 30px;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 600px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-    position: relative;
-}
-
-/* Close Button */
-.close {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-/* Buttons */
-.form-actions {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-}
-
 #event-form {
     max-width: 600px;
     margin: 50px auto; /* centers it horizontally */
@@ -108,12 +67,12 @@ input, textarea, select {
 
 /* When a field is valid */
 input:valid, textarea:valid, select:valid {
-    border-color: green; /* grün, wenn alles korrekt */
+    border-color: green !important; /* grün, wenn alles korrekt */
 }
 
 /* When a field is invalid */
 input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
-    border-color: red; /* rot, wenn falsch/fokusiert */
+    border-color: red  !important; /* rot, wenn falsch/fokusiert */
 }
 
 
@@ -166,7 +125,7 @@ input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
 
 #fileNames {
     margin-top: 5px;
-    font-size: 10px;
+    font-size: 12px;
     color: #333;
 }
 
