--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -1,6 +1,9 @@
 #navbar {
     background-color: white;
     border-bottom: 1px solid lightgray;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
 }
 
 #navbar ul {
