Cancel button bei cancelled events gelöscht. Image upload bei readonly angepasst

--- a/src/main/resources/static/css/createEvent.css
+++ b/src/main/resources/static/css/createEvent.css
@@ -134,3 +134,8 @@ input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
     padding-left: 20px;
     margin: 0;
 }
+
+
+.readonly-imageLabel {
+    pointer-events: none;
+}
