--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -67,7 +67,7 @@
                         </div>
 
                         <div class="mb-3 d-flex flex-column">
-                            <label for="images" class="form-label">Upload images</label>
+                            <label for="images" class="form-label" id="imageLabel">Upload images</label>
                             <input type="file" id="images" name="images" accept="image/*" multiple class="form-control" required onchange="listFileNames()">
                             <div class="invalid-feedback">
                                 Please enter a valid image-file.
