--- a/src/main/resources/static/css/createEvent.css
+++ b/src/main/resources/static/css/createEvent.css
@@ -119,7 +119,14 @@ input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
 
 
 .readonly-file {
-    pointer-events: none;   /* disable Mouse-Interaktion */
+    pointer-events: none !important;   /* disable Mouse-Interaktion */
+    opacity: 0.6;
+    cursor: not-allowed !important;
+}
+
+/* Additional styling for file input container when readonly */
+.mb-3:has(.readonly-file) {
+    pointer-events: none;
     opacity: 0.6;
 }
 
@@ -135,7 +142,115 @@ input:invalid:focus, textarea:invalid:focus, select:invalid:focus {
     margin: 0;
 }
 
+#navbar {
+    background-color: white;
+    border-bottom: 1px solid lightgray;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+}
 
-.readonly-imageLabel {
-    pointer-events: none;
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow: hidden;
+    width: 100%;
+    font-size: 1rem;
+}
+
+#navbar li {
+    height: 75px;
+    align-items: center;
+}
+
+.navbarLeft {
+    float: left;
+    display: flex;
+}
+
+.navbarRight {
+    float: right;
+    display: flex;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.logo {
+    height: 100px;
+    width: 100px;
+}
+
+.logo:hover {
+
+}
+
+.links {
+    color:black;
+    padding: 100% 15px;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: center;
+}
+
+.links:hover {
+    transition-duration: 300ms;
+    background-color:#122453;
+    color:white;
+}
+
+#profile {
+    height: 50px;
+    width: 50px;
+}
+
+#cart, #favorites {
+    height: 25px;
+    width: 25px;
+}
+
+
+#profile:hover,
+#cart:hover,
+#favorites:hover {
+    cursor: pointer;
+}
+
+.index {
+    background-image: url("../images/backgroundImage.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:600px;
+    border-bottom: 1px solid lightgray;
+}
+
+.dim {
+    background-color: rgba(0,0,0,30%);
+    height: 600px;
+    text-align: center;
+    align-content: center;
+    flex: 1;
+}
+
+.dim h1 {
+    color:white;
+    font-weight: bold;
+    font-size: 65px;
+}
+
+#search {
+    height:50px;
+    width:500px;
+    padding-left: 15px;
+    border-radius: 30px;
+}
+
+#activities {
+    text-align: center;
+}
+
+#activities h2 {
+    font-weight: bolder;
+    text-decoration: 1px solid black;
 }
