--- a/src/main/resources/templates/Usertest.html
+++ b/src/main/resources/templates/Usertest.html
@@ -9,9 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <link rel="stylesheet" href="/css/login_page.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/homepage.css">
+    <link rel="stylesheet" href="/css/createEvent.css">
+    <link rel="stylesheet" href="/css/toast.css">
     <title>Modern Login Page</title>
 </head>
 <body>
+
+
+<div id="navbar">
+    <ul>
+        <li class="navbarLeft"><a href="/homepage"><img class="logo" src="/images/icons/EVERout_Logo_dunkel_v3.png" alt="Home button"></a></li>
+        <li class="navbarLeft"><a class="links" href="/events">EVENTS</a></li>
+        <li class="navbarRight"><a href="/usertest"><img id="profile" src="/images/icons/Profile.png" alt="profile-account"></a></li>
+        <li class="navbarRight"><a><img id="cart" src="/images/icons/shoppingCart.png" alt="cart"></a></li>
+        <li class="navbarRight"><a><img id="favorites" src="/images/icons/favorites.png" alt="favorites"></a></li>
+    </ul>
+</div>
 
 <div class="container" id="container">
     <div class="form-container sign-up">
